# pdf-service

./: .gitignore  Dockerfile  README.md  pyproject.toml
src/pdf_service/: api.py  lambda.py
