[project]
name = "pdf-service"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "mangum>=0.19.0",
    "pydantic>=2.9.2",
    "pymupdf4llm>=0.0.17",
    "pymupdf>=1.24.13",
    "python-multipart>=0.0.17",
    "starlette>=0.41.2",
    "uvicorn>=0.32.0",
]

[dependency-groups]
dev = [
    "mypy>=1.13.0",
    "ruff>=0.7.3",
]

[tool.uv.workspace]
members = ["example-lib"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
